Statically link OpenDoors
There's no need to deal with the headache of a library here.

--- a/src/doors/ny2008/src/Makefile
+++ b/src/doors/ny2008/src/Makefile
@@ -5,12 +5,13 @@ include ${SRC_ROOT}/build/Common.gmake
 
 ODOORS_SRC	:= $(SRC_ROOT)/odoors
 CFLAGS += $(CIOLIB-MT_CFLAGS) $(XPDEV-MT_CFLAGS)
-CFLAGS += -I$(ODOORS_SRC)
+CFLAGS += -I$(ODOORS_SRC) -DOD_WIN32_STATIC
 LDFLAGS += $(CIOLIB-MT_LDFLAGS) $(XPDEV-MT_LDFLAGS) -L${ODOORS_SRC}/libs-`uname`
 CPPFLAGS += $(CFLAGS)
+LIBS += $(ODOORS_SRC)/libs-`uname`/libODoors.a $(CIOLIB-MT_LIBS) $(XPDEV-MT_LIBS)
 
 $(NY2008) : $(OBJS)
-	$(CXX) $(CPPFLAGS) ${LDFLAGS} $(OBJS) -lODoors -o $(NY2008) $(CIOLIB-MT_LIBS) $(XPDEV-MT_LIBS)
+	$(CXX) $(CPPFLAGS) ${LDFLAGS} $(OBJS)  $(LIBS) -o $(NY2008)
 
 $(AEDIT) : $(AEDIT_OBJS)
 	$(CXX) $(CPPFLAGS) ${LDFLAGS} $(AEDIT_OBJS) -o $(AEDIT)
@@ -22,5 +23,5 @@ $(NYIBBS) : $(NYIBBS_OBJS)
 	$(CXX) $(CPPFLAGS) ${LDFLAGS} $(NYIBBS_OBJS) -o $(NYIBBS) $(XPDEV-MT_LIBS)
 
 $(NYEDIT) : $(NYEDIT_OBJS)
-	$(CXX) $(CPPFLAGS) ${LDFLAGS} $(NYEDIT_OBJS) -lODoors -o $(NYEDIT) $(CIOLIB-MT_LIBS) $(XPDEV-MT_LIBS)
+	$(CXX) $(CPPFLAGS) ${LDFLAGS} $(NYEDIT_OBJS)  $(LIBS) -o $(NYEDIT)
 
