Linux can't be expected to have a wide curses that works.
Use pkg-config.

--- a/src/doors/clans-src/src/GNUmakefile
+++ b/src/doors/clans-src/src/GNUmakefile
@@ -80,6 +80,14 @@ ifdef WIN
 else
  ifeq ($(os),darwin)
   CONSOLE_LIBS := -lcurses
+ elifeq ($(os),linux)
+  ifeq ($(shell pkg-config ncursesw --exists && echo YES), YES)
+   CIOLIB-MT_LIBS += $(shell pkg-config ncursesw --libs)
+   CIOLIB-MT_CFLAGS += $(shell pkg-config ncursesw --cflags)
+  else
+   # This probobly won't work
+   CONSOLE_LIBS := -lncursesw
+  endif
  else
   CONSOLE_LIBS := -lcursesw
  endif
