No point in using curses here, just spew ANSI
We're going to be spewing ANSI from the door anyway, may as well
get started early.

We're also assuming UTF-8 here.

--- a/src/doors/clans-src/src/GNUmakefile
+++ b/src/doors/clans-src/src/GNUmakefile
@@ -203,7 +203,7 @@ clean:
 	$(DELETE) ClansDevKit-*.zip
 
 clans$(EXEFILE):      $(OBJS) unix_wrappers.o
-	$(CC) $(CFLAGS) $(LDFLAGS) $(OBJS) unix_wrappers.o -o clans$(EXEFILE) $(LIBS) $(CONSOLE_LIBS)
+	$(CC) $(CFLAGS) $(LDFLAGS) $(OBJS) unix_wrappers.o -o clans$(EXEFILE) $(LIBS)
 
 %.e: %.evt native-ecomp$(NATIVEEXEFILE)
 	./native-ecomp$(NATIVEEXEFILE) $< $@
