Make the output filename not match the input filename for the .res
Because this is what the other Windows builds do.

--- a/src/doors/clans-src/src/GNUmakefile
+++ b/src/doors/clans-src/src/GNUmakefile
@@ -20,7 +20,7 @@ ifdef WIN
  # We won't be using the DLL
  CFLAGS	+=	-DOD_WIN32_STATIC
  CLANS_LIBS +=	-lws2_32 -lgdi32 -lcomctl32
- CLANS_LDFLAGS+=-mwindows $(ODOORS)/libs-$(OS)/ODRes.res
+ CLANS_LDFLAGS+=-mwindows $(ODOORS)/libs-$(OS)/ODoor.res
  WRAPEXT :=	.cmd
 else
  # Oh, the things we put up with to use curses...
