Switch to new command line parser, make build on windows

--- a/src/doors/ny2008/src/Makefile
+++ b/src/doors/ny2008/src/Makefile
@@ -3,19 +3,24 @@ CXX	?= g++
 SRC_ROOT	:=	../../..
 include ${SRC_ROOT}/build/Common.gmake
 
+ODOORS_SRC	:= $(SRC_ROOT)/odoors
 ifdef win
- OBJS  +=      $(SRC_ROOT)/odoors/libs-$(OS)/ODoor.res
+ ODLIB	:=	$(ODOORS_SRC)/libs-Win$(win)
+ OBJS	+=	$(ODLIB)/ODoor.res
+ XLDFLAGS +=	-mwindows
+ XLIBS	+=	-lcomctl32
+else
+ ODLIB	:=	$(ODOORS_SRC)/libs-`uname`
 endif
 
-ODOORS_SRC	:= $(SRC_ROOT)/odoors
 CFLAGS += $(CIOLIB-MT_CFLAGS) $(XPDEV-MT_CFLAGS)
 CFLAGS += -I$(ODOORS_SRC) -DOD_WIN32_STATIC
 LDFLAGS += $(CIOLIB-MT_LDFLAGS) $(XPDEV-MT_LDFLAGS) -L${ODOORS_SRC}/libs-`uname`
 CPPFLAGS += $(CFLAGS)
-LIBS += $(ODOORS_SRC)/libs-`uname`/libODoors.a $(CIOLIB-MT_LIBS) $(XPDEV-MT_LIBS)
+LIBS += $(ODLIB)/libODoors.a $(CIOLIB-MT_LIBS) $(XPDEV-MT_LIBS)
 
 $(NY2008) : $(OBJS)
-	$(CXX) $(CPPFLAGS) ${LDFLAGS} $(OBJS)  $(LIBS) -o $(NY2008)
+	$(CXX) $(CPPFLAGS) ${LDFLAGS} $(XLDFLAGS) $(OBJS) $(LIBS) $(XLIBS) -o $(NY2008)
 
 $(AEDIT) : $(AEDIT_OBJS)
 	$(CXX) $(CPPFLAGS) ${LDFLAGS} $(AEDIT_OBJS) -o $(AEDIT)
@@ -27,5 +32,5 @@ $(NYIBBS) : $(NYIBBS_OBJS)
 	$(CXX) $(CPPFLAGS) ${LDFLAGS} $(NYIBBS_OBJS) -o $(NYIBBS) $(XPDEV-MT_LIBS)
 
 $(NYEDIT) : $(NYEDIT_OBJS)
-	$(CXX) $(CPPFLAGS) ${LDFLAGS} $(NYEDIT_OBJS)  $(LIBS) -o $(NYEDIT)
+	$(CXX) $(CPPFLAGS) ${LDFLAGS} $(NYEDIT_OBJS) $(LIBS) $(XLIBS) -o $(NYEDIT)
 
